# fin-pol-gov-news

./: .env.example  .gitignore  README.md  SKILL.md  pyproject.toml
.claude/: settings.json
assets/: template.md
config/: schema.json
config/defaults/: sources.json  topics.json
references/: editorial.md  prompt-examples.md  report-generation-spec.md  report-template.md  script-catalog.md  style-guide.md  trigger-examples.md  workflow.md
scripts/: check-env.py  config_loader.py  enrich-articles.py  env_utils.py  fetch-rss.py  fetch-web.py  generate-pdf.py  generate-report.py  merge-sources.py  run-pipeline.py  sanitize-html.py  send-email.py  source-health.py  summarize-merged.py  validate-config.py
tests/: test_tables.md
